# hybrid-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  test_chroma.py
chroma_db/: chroma.sqlite3
config/: settings.py
data/: evaluation_results.csv  golden_dataset.json
frontend/: app.py
prompts/v1/: rag_qa.yaml
scripts/: evaluate_ragas.py  generate_dataset.py  ingest_all.py  test_e2e.py
src/api/: main.py  schemas.py
src/api/routes/: ingest.py  query.py
src/generation/: chain.py  prompt_loader.py
src/ingestion/: chunker.py  loader.py
src/vectorstore/: bm25_store.py  chroma_store.py  hybrid_search.py
tests/: test_ingestion.py  test_retrieval.py
