[project]
name = "rag-system"
version = "0.1.0"
description = "Production-grade domain-specific RAG system"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core orchestration
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-huggingface>=0.1.0",
    "langchain-cohere>=0.3.1",
    "langchain-groq>=0.1.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.34.0",
    "requests>=2.31.0",
    # PDF loading
    "pymupdf>=1.24.0",
    # Vector store
    "chromadb>=0.5.0",
    # Embeddings (local)
    "sentence-transformers>=3.0.0",
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Settings & config
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # YAML for prompt versioning
    "pyyaml>=6.0.0",
    # Utilities
    "tiktoken>=0.7.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ragas>=0.1.9",
    "datasets>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
